--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 <!--</div>-->
             </div>
 
-        <audio src="backgroundsound.mp3" autoplay>
-            <p>If you are reading this, it is because your browser does not support the audio element.     </p>
-            <embed src="backgroundsound.mp3" width="180" height="90" hidden="true" ></embed>
-        </audio>
+        <!--<audio src="backgroundsound.mp3" autoplay>-->
+            <!--<p>If you are reading this, it is because your browser does not support the audio element.     </p>-->
+            <!--<embed src="backgroundsound.mp3" width="180" height="90" hidden="true" ></embed>-->
+        <!--</audio>-->
 
         </div>
 
