--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head profile="http://www.w3.org/2005/10/profile">
     <!--<link rel="icon"-->
-          <!--type="image/png"-->
-          <!--href="images/flav.png">-->
+    <!--type="image/png"-->
+    <!--href="images/flav.png">-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -97,8 +97,14 @@
                             the world
                             of start-ups and technology. I'm currently studying computer science at Northeastern
                             University where I've
-                            been taught the fundamentals of programming, discrete math, data structures, database management, web development, and more.
+                            been taught the fundamentals of programming, discrete math, data structures, database
+                            management, web development, and more.
                         </p>
+                    </div>
+                </section>
+
+                <section class="container">
+                    <div class="inner-container">
                         <h1>Hobbies</h1>
                         <p class="text">
                             I enjoy rock climbing, mountaineering, dirt biking, and hiking. At Northeastern, I'm a part
@@ -107,7 +113,11 @@
                             mountain biking
                             if I have the time.
                         </p>
+                    </div>
+                </section>
 
+                <section class="container">
+                    <div class="inner-container">
                         <h1>Stats</h1>
                         <p class="text">
                             Height: 5'10" <br>
