--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
+
     <meta name="author" content="">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -64,6 +65,7 @@
                             <li><a href="https://www.linkedin.com/in/christopherrisley/" target="_blank">Experience</a>
                             </li>
                             <li><a href="https://github.com/CrizR" target="_blank">GitHub</a></li>
+                            <li><a href="projects.html">Projects</a></li>
                         </ul>
                     </nav>
                     <iframe src="http://githubbadge.appspot.com/CrizR"
@@ -87,7 +89,7 @@
 
             <article class="main">
                 <div class="avatar">
-                    <img class="me" src="images/avatar.jpg" alt="Chris Risley Avat" width=25% height=300px>
+                    <img class="me" src="images/avatar.jpg" alt="Chris Risley Avatar">
                 </div>
                 <section class="container">
                     <div class="inner-container">
