formatted contributions graph

--- a/projects.html
+++ b/projects.html
@@ -100,10 +100,14 @@
                 </div>
             </div>
             <!-- Prepare a container for your calendar. -->
-            <div class="calendar">
-                <!-- Loading stuff -->
-                Retrieving CrizR's Contribution Calendar
-            </div>
+            <section class = "calendar-body">
+                <h4>Contributions</h4>
+                <div class="calendar">
+                    <!-- Loading stuff -->
+                    Retrieving CrizR's Contribution Calendar
+                </div>
+            </section>
+
             <article class = "projects-wrapper">
                 <div id="github-projects"></div>
             </article>
