changed a little bit about the cover page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                             border-radius: 25px;
                             text-align: left;
                             margin-left: 400px;"
-
                             data-version="v1"
                             data-size="medium"
                             data-locale="en_US"
@@ -70,7 +69,7 @@
                     </nav>
                     <iframe src="http://githubbadge.appspot.com/CrizR"
                             style="
-                              width: 300px;
+                            width: 300px;
                             height: 250px;
                             margin-top: -43px;
                             background: #2F3336;
@@ -93,7 +92,7 @@
                 </div>
                 <section class="container">
                     <div class="inner-container">
-                        <h3>Overview</h3>
+                        <h3>About Me</h3>
                         <p class="text">
                             Born in Portola Valley, CA in the heart of Silicon Valley, I've always been interested in
                             the world
@@ -110,25 +109,24 @@
                         <h1>Hobbies</h1>
                         <p class="text">
                             I enjoy rock climbing, mountaineering, dirt biking, and hiking. At Northeastern, I'm a part
-                            of the
-                            outdoor's club (NUHOC), ski club, and the rock climbing club. I'm hoping to get into
+                            of the outdoor's club (NUHOC), ski club, and the rock climbing club. I'm hoping to get into
                             mountain biking
-                            if I have the time.
+                            if I have the time. My dream is to one day climb Denali.
                         </p>
                     </div>
                 </section>
 
-                <section class="container">
-                    <div class="inner-container">
-                        <h1>Stats</h1>
-                        <p class="text">
-                            Height: 5'10" <br>
-                            Shoe Size: 9.5 <br>
-                            Eye Color: Hazel <br>
-                            Hair Color: Dirty Blonde / Brown / Sometimes Grey <br>
-                        </p>
-                    </div>
-                </section>
+                <!--<section class="container">-->
+                    <!--<div class="inner-container">-->
+                        <!--<h1>Stats</h1>-->
+                        <!--<p class="text">-->
+                            <!--Height: 5'10" <br>-->
+                            <!--Shoe Size: 9.5 <br>-->
+                            <!--Eye Color: Hazel <br>-->
+                            <!--Hair Color: Dirty Blonde / Brown / Sometimes Grey <br>-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</section>-->
 
 
 
