added note about producing music

--- a/index.html
+++ b/index.html
@@ -108,26 +108,25 @@
                     <div class="inner-container">
                         <h1>Hobbies</h1>
                         <p class="text">
-                            I enjoy rock climbing, mountaineering, dirt biking, and hiking. At Northeastern, I'm a part
+                            I enjoy rock climbing, mountaineering, dirt biking, and hiking. I've also recently started
+                            producing music with a software called Ableton. At Northeastern, I'm a part
                             of the outdoor's club (NUHOC), ski club, and the rock climbing club. I'm hoping to get into
-                            mountain biking
-                            if I have the time. My dream is to one day climb Denali.
+                            mountain biking if I have the time. My dream is to one day climb Denali.
                         </p>
                     </div>
                 </section>
 
                 <!--<section class="container">-->
-                    <!--<div class="inner-container">-->
-                        <!--<h1>Stats</h1>-->
-                        <!--<p class="text">-->
-                            <!--Height: 5'10" <br>-->
-                            <!--Shoe Size: 9.5 <br>-->
-                            <!--Eye Color: Hazel <br>-->
-                            <!--Hair Color: Dirty Blonde / Brown / Sometimes Grey <br>-->
-                        <!--</p>-->
-                    <!--</div>-->
+                <!--<div class="inner-container">-->
+                <!--<h1>Stats</h1>-->
+                <!--<p class="text">-->
+                <!--Height: 5'10" <br>-->
+                <!--Shoe Size: 9.5 <br>-->
+                <!--Eye Color: Hazel <br>-->
+                <!--Hair Color: Dirty Blonde / Brown / Sometimes Grey <br>-->
+                <!--</p>-->
+                <!--</div>-->
                 <!--</section>-->
-
 
 
                 <section class="container">
