--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,7 @@
     <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
     <script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+        //The below code was produced with the help of the github project below
         //http://yonaba.github.io/2012/08/14/List-your-GitHub-projects-using-JavaScript-and-jQuery.md.html
         jQuery.githubUser = function(username, callback) {
 //            jQuery.getJSON('https://api.github.com/users/'+username+'?client_id=36efab4c42eb11829967&client_secret=6fc94547bf8dd26ae9ac59d40ead7b6aa48ac6c0/repos?callback=?',callback);
