--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
+
 
 </head>
 <body class="index">
@@ -116,19 +118,6 @@
                     </div>
                 </section>
 
-                <!--<section class="container">-->
-                <!--<div class="inner-container">-->
-                <!--<h1>Stats</h1>-->
-                <!--<p class="text">-->
-                <!--Height: 5'10" <br>-->
-                <!--Shoe Size: 9.5 <br>-->
-                <!--Eye Color: Hazel <br>-->
-                <!--Hair Color: Dirty Blonde / Brown / Sometimes Grey <br>-->
-                <!--</p>-->
-                <!--</div>-->
-                <!--</section>-->
-
-
                 <section class="container">
                     <div class="inner-container">
                         <h3>Skills</h3>
@@ -153,8 +142,22 @@
             </article>
         </div>
         <div class="mastfoot">
+            <script type="text/javascript">
+                baseUrl = "https://widgets.cryptocompare.com/";
+                var scripts = document.getElementsByTagName("script");
+                var embedder = scripts[ scripts.length - 1 ];
+                var cccTheme = {"General":{"background":"#2F3336","priceText":"#fff"},"Currency":{"color":"#fff"}};
+                (function (){
+                    var appName = encodeURIComponent(window.location.hostname);
+                    if(appName==""){appName="local";}
+                    var s = document.createElement("script");
+                    s.type = "text/javascript";
+                    s.async = true;
+                    var theUrl = baseUrl+'serve/v3/coin/header?fsyms=ETH,BTC,XRP,LTC&tsyms=USD';
+                    s.src = theUrl + ( theUrl.indexOf("?") >= 0 ? "&" : "?") + "app=" + appName;
+                    embedder.parentNode.appendChild(s);
+                })();
+            </script>
         </div>
-    </div>
-</div>
 </body>
 </html>
