--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
 
     <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106814101-1"></script>
+
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106814101-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments)};
+        gtag('js', new Date());
+
+        gtag('config', 'UA-106814101-1');
+    </script>
+
+
+
 
 </head>
 <body class="index">
@@ -159,5 +174,7 @@
                 })();
             </script>
         </div>
+    </div>
+</div>
 </body>
 </html>
