--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,18 @@
         });
     </script>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106814101-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments)};
+        gtag('js', new Date());
+
+        gtag('config', 'UA-106814101-1');
+    </script>
+
+
+
 </head>
 
 
@@ -118,5 +130,26 @@
 <script>
     GitHubCalendar(".calendar", "CrizR");
 </script>
+
+<footer>
+    <div class="mastfoot">
+        <script type="text/javascript">
+            baseUrl = "https://widgets.cryptocompare.com/";
+            var scripts = document.getElementsByTagName("script");
+            var embedder = scripts[ scripts.length - 1 ];
+            var cccTheme = {"General":{"background":"#2F3336","priceText":"#fff"},"Currency":{"color":"#fff"}};
+            (function (){
+                var appName = encodeURIComponent(window.location.hostname);
+                if(appName==""){appName="local";}
+                var s = document.createElement("script");
+                s.type = "text/javascript";
+                s.async = true;
+                var theUrl = baseUrl+'serve/v3/coin/header?fsyms=ETH,BTC,XRP,LTC&tsyms=USD';
+                s.src = theUrl + ( theUrl.indexOf("?") >= 0 ? "&" : "?") + "app=" + appName;
+                embedder.parentNode.appendChild(s);
+            })();
+        </script>
+    </div>
+</footer>
 </body>
 </html>
