--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,9 @@
 
     <!-- Latest compiled and minified JavaScript -->
 
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
+
+
     <title>Chris Risley</title>
 
     <!-- Bootstrap core CSS -->
@@ -102,9 +105,7 @@
                     <nav>
                         <ul class="nav masthead-nav">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="https://www.linkedin.com/in/christopherrisley/" target="_blank">Experience</a>
-                            </li>
-                            <li><a href="https://github.com/CrizR" target="_blank">GitHub</a></li>
+                            <li><a href="dlbs/Resume%20V3.pdf">Resume</a></li>
                             <li class="active"><a href="projects.html">Projects</a></li>
                         </ul>
                     </nav>
@@ -131,22 +132,15 @@
 
 <footer>
     <div class="mastfoot">
-        <script type="text/javascript">
-            baseUrl = "https://widgets.cryptocompare.com/";
-            var scripts = document.getElementsByTagName("script");
-            var embedder = scripts[ scripts.length - 1 ];
-            var cccTheme = {"General":{"background":"#2F3336","priceText":"#fff"},"Currency":{"color":"#fff"}};
-            (function (){
-                var appName = encodeURIComponent(window.location.hostname);
-                if(appName==""){appName="local";}
-                var s = document.createElement("script");
-                s.type = "text/javascript";
-                s.async = true;
-                var theUrl = baseUrl+'serve/v3/coin/header?fsyms=ETH,BTC,XRP,LTC&tsyms=USD';
-                s.src = theUrl + ( theUrl.indexOf("?") >= 0 ? "&" : "?") + "app=" + appName;
-                embedder.parentNode.appendChild(s);
-            })();
-        </script>
+        <div class="mastfoot">
+            <div class="test">
+                <a href="https://www.facebook.com/risleychris"><p>Facebook</p></a>
+                <a href="mailto: risley.c@husky.neu.edu"><p>Email</p></a>
+                <a href="https://www.linkedin.com/in/christopherrisley/"><p>Linkedin</p></a>
+                <a href="https://github.com/CrizR"><p>Github</p></a>
+                <a href="#"><p>(650)521-1067</p></a>
+            </div>
+        </div>
     </div>
 </footer>
 </body>
