--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             that clients or customers will use or develop an underlying tool that helps protect or
                             improve the company. I’m pretty open to trying new things, and I’m still trying to
                             determine what specific area I’d like to focus on for my career.
-                            <a style = "color: #2aabd2;" class = href="dlbs/About%20Me.pdf">More</a>
+                            <a style = "color: #2aabd2;" href="dlbs/About%20Me.pdf">More</a>
                         </p>
                     </div>
                 </section>
