--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
                                 <h3>PHP</h3></li>
                             <li><span class="bar html-css"></span>
                                 <h3>HTML/CSS</h3></li>
+                            <li><span class="bar c"></span>
+                                <h3>C</h3></li>
                             <li><span class="bar cplus"></span>
                                 <h3>C++</h3></li>
                             <li><span class="bar sql"></span>
@@ -133,7 +135,7 @@
                 <a href="https://github.com/CrizR"><p>Github</p></a>
                 <a href="#"><p>(650)521-1067</p></a>
                 </div>
-        </div>
+
         </div>
     </div>
 </div>
