Worked Around Chrome Bug by Removing Footer

--- a/index.html
+++ b/index.html
@@ -127,8 +127,12 @@
                 </section>
             </article>
         </div>
+    </div>
+</div>
+</body>
+<footer>
         <div class="mastfoot">
-            <div class="test">
+            <div class="foot_class">
                 <a href="https://www.facebook.com/risleychris"><p>Facebook</p></a>
                 <a href="mailto: risley.c@husky.neu.edu"><p>Email</p></a>
                 <a href="https://www.linkedin.com/in/christopherrisley/"><p>Linkedin</p></a>
@@ -137,7 +141,5 @@
                 </div>
 
         </div>
-    </div>
-</div>
-</body>
+</footer>
 </html>
