--- a/projects.html
+++ b/projects.html
@@ -69,11 +69,11 @@
                         // language=HTML
                         list.append('<div class = "project-body">' +
                             '<div class = "project-inner">' +
-                            '<dt class = "project-title"><a href="'+ (this.homepage?this.homepage:this.html_url) +'">' + this.name + '</a> ' +
-                            '<em>'+(this.language?('('+this.language+')'):'')+'</em>' +
-                            '<span id="star">&nbsp;&#9733; ' + this.stargazers_count +' </span></dt>' +
-                            '<p class = "project-description">' + this.description +'</p>' +
-                            '<p class = "project-use">'+  'Last Updated' + ': '+ this.updated_at+'</p>' +
+                            '<dt class = "project-title"><a href="' + (this.homepage ? this.homepage : this.html_url) + '">' + this.name + '</a> ' +
+                            '<em>' + (this.language ? ('(' + this.language + ')') : '') + '</em>' +
+                            '<span id="star">&nbsp;&#9733; ' + this.stargazers_count + ' </span></dt>' +
+                            '<p class = "project-description">' + this.description + '</p>' +
+                            '<p class = "project-use">' + 'Last Updated' + ': ' + this.updated_at + '</p>' +
                             '</div></div>');
                     }
                 });
@@ -129,19 +129,18 @@
 <script>
     GitHubCalendar(".calendar", "CrizR");
 </script>
-
-<footer>
-    <div class="mastfoot">
-        <div class="mastfoot">
-            <div class="test">
-                <a href="https://www.facebook.com/risleychris"><p>Facebook</p></a>
-                <a href="mailto: risley.c@husky.neu.edu"><p>Email</p></a>
-                <a href="https://www.linkedin.com/in/christopherrisley/"><p>Linkedin</p></a>
-                <a href="https://github.com/CrizR"><p>Github</p></a>
-                <a href="#"><p>(650)521-1067</p></a>
-            </div>
-        </div>
-    </div>
-</footer>
 </body>
+
+<!--<footer>-->
+<!--<div class="mastfoot">-->
+    <!--<div class="foot_class">-->
+        <!--<a href="https://www.facebook.com/risleychris"><p>Facebook</p></a>-->
+        <!--<a href="mailto: risley.c@husky.neu.edu"><p>Email</p></a>-->
+        <!--<a href="https://www.linkedin.com/in/christopherrisley/"><p>Linkedin</p></a>-->
+        <!--<a href="https://github.com/CrizR"><p>Github</p></a>-->
+        <!--<a href="#"><p>(650)521-1067</p></a>-->
+    <!--</div>-->
+<!--</div>-->
+<!--</footer>-->
+
 </html>
